# simpleplay

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
simpleplay/: __init__.py  __main__.py  app.py  models.py  player.py  youtube.py
simpleplay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_app.py  test_models.py  test_player.py  test_playlist_sync.py  test_queue_view.py  test_youtube.py
tsetse/: __init__.py  __main__.py  app.py  player.py  youtube.py
