[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tsetse"
dynamic = ["version"]
description = "Terminal YouTube music player with vim-like bindings"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["yt-dlp"]
authors = [{ name = "Geet" }]
keywords = ["terminal", "music", "youtube", "mpv", "player"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/GeetRakala/tsetse"
Repository = "https://github.com/GeetRakala/tsetse"
Issues = "https://github.com/GeetRakala/tsetse/issues"

[project.scripts]
tsetse = "tsetse.__main__:main"

[tool.setuptools]
packages = ["tsetse"]

[tool.setuptools.dynamic]
version = { attr = "tsetse.__version__" }
